# OpenGL_MandelbrotFractal

./: CMakeLists.txt  README.md
Dep/glad/include/glad/: glad.h
Dep/glad/src/: glad.c
Shaders/: shader.comp  shader.frag  shader.vert
include/: Input.h  Shader.h
src/: Input.cpp  Shader.cpp  main.cpp
